# pipit

./: .gitignore  BENCHMARK-FISH-RESULTS.md  BENCHMARK-TBENCH-RESULTS.md  BENCHMARK-TIER5-RESULTS.md  BENCHMARKS.md  CHANGELOG-v0.3.3.md  Cargo.toml  LICENSE  README.md  TUI-TEST-RESULTS.md  benchmark_results.json  daemon.toml.example  install.sh  pipit-cli.txt
crates/pipit-agent-mesh/: Cargo.toml
crates/pipit-agent-mesh/src/: failure.rs  lib.rs  negotiation.rs  partition.rs  registry.rs  replication.rs  routing.rs  transport.rs
crates/pipit-agents/: Cargo.toml
crates/pipit-agents/src/: catalog.rs  catalog_v2.rs  lib.rs
crates/pipit-bench/: Cargo.toml
crates/pipit-bench/src/: history.rs  lib.rs  profiler.rs  runner.rs
crates/pipit-bridge/: Cargo.toml
crates/pipit-bridge/src/: lib.rs  protocol.rs  session.rs  transport.rs
crates/pipit-browser/: Cargo.toml
crates/pipit-browser/src/: cdp.rs  extension_bridge.rs  lib.rs  tools.rs  twin.rs  visual_diff.rs
crates/pipit-channel/: Cargo.toml
crates/pipit-channel/src/: lib.rs  types.rs
crates/pipit-cli/: Cargo.toml
crates/pipit-cli/src/: auth.rs  init.rs  main.rs  migrations.rs  persistence.rs  persistence_v2.rs  plugin.rs  prompt_builder.rs  rpc.rs  setup.rs  tui.rs  update.rs  web_ui.rs  workflow.rs
crates/pipit-cli/tests/: plans_restart.rs
crates/pipit-config/: Cargo.toml
crates/pipit-config/src/: credentials.rs  feature_flags.rs  lib.rs  model_routing.rs  provider_roster.rs  settings_hierarchy.rs  types.rs
crates/pipit-context/: Cargo.toml
crates/pipit-context/src/: budget.rs  budget_tracker.rs  cache.rs  cache_microcompact.rs  cache_optimizer.rs  compaction.rs  content_replacement.rs  dedup.rs  federated_knowledge.rs  knowledge_injection.rs  lib.rs  prompt_ir.rs  session.rs  session_memory_compact.rs  speculative_compact.rs  tool_noise.rs  transcript.rs  utility.rs
crates/pipit-core/: Cargo.toml
crates/pipit-core/src/: adaptive_budget.rs  adaptive_context.rs  adversarial.rs  agent.rs  blob_store.rs  bridge_protocol.rs  candidates.rs  capability.rs  causal_snapshot.rs  command_registry.rs  continuation.rs  cost_oracle.rs  counter_planner.rs  delegation.rs  deliberation.rs  domain_architect.rs  dx_surface.rs  events.rs  export.rs  file_provenance.rs  governor.rs  hydration.rs  integration_ports.rs  integration_verifier.rs  kani_proofs.rs  kernel.rs  ledger.rs  ledger_merkle.rs  lib.rs  lineage.rs  loop_detector.rs  mcts.rs  model_router.rs  permission_ledger.rs  pev.rs  phase_timeout.rs  plan_gate.rs  plan_ir.rs  planner.rs  planner_llm.rs  (+48 more)
crates/pipit-core/tests/: adaptive_budget_integration.rs  benchmark_planner.rs  crash_recovery_conformance.rs  property_tests.proptest-regressions  property_tests.rs  recovery_integration.rs  turn_fsm_conformance.rs
crates/pipit-daemon/: Cargo.toml
crates/pipit-daemon/src/: ci_fix.rs  config.rs  cron.rs  forge_github.rs  git.rs  health_monitor.rs  main.rs  messaging_slack.rs  observability.rs  pipeline.rs  pool.rs  queue.rs  reporter.rs  runner.rs  server.rs  store.rs  teams_store.rs  triggers.rs  vcs_reconciler.rs  worker.rs
crates/pipit-deps/: Cargo.toml
crates/pipit-deps/src/: lib.rs  osv.rs  scanner.rs
crates/pipit-edit/: Cargo.toml
crates/pipit-edit/src/: apply.rs  history.rs  lib.rs  search_replace.rs  udiff.rs  whole_file.rs
crates/pipit-evolve/: Cargo.toml
crates/pipit-evolve/src/: evolution.rs  fitness.rs  lib.rs  population.rs
crates/pipit-extensions/: Cargo.toml
crates/pipit-extensions/src/: event.rs  hook_kind.rs  lib.rs  prompt_runtime.rs  replay.rs  runtime.rs  wasm_runtime.rs
crates/pipit-intelligence/: Cargo.toml
crates/pipit-intelligence/src/: dataflow.rs  dependency_health.rs  discovery.rs  file_watcher.rs  git_archaeology.rs  graph.rs  lib.rs  projector.rs  repomap.rs  semantic_ir.rs  tags.rs
crates/pipit-io/: Cargo.toml
crates/pipit-io/src/: agent_colors.rs  app.rs  budget_viz.rs  composer.rs  editor_integration.rs  input.rs  lib.rs  math.rs  render.rs  render_engine.rs  spinner_verbs.rs  suggestions.rs  terminal_caps.rs  theme_bridge.rs  tui.rs  vim.rs
crates/pipit-mcp/: Cargo.toml
crates/pipit-mcp/src/: a2a.rs  lib.rs  plugins.rs  sse.rs
crates/pipit-memory/: Cargo.toml
crates/pipit-memory/src/: auto_dream.rs  hnsw.rs  lib.rs  memory_log.rs  secret_scanner.rs  team_sync.rs
crates/pipit-mesh/: Cargo.toml
crates/pipit-mesh/examples/: mesh_delegate.rs  mesh_delegate_test.rs  mesh_test.rs
crates/pipit-mesh/src/: crdt.rs  delegation.rs  lib.rs  negotiation.rs  node.rs  replication.rs  routing.rs  swim.rs  transport.rs
crates/pipit-permissions/: Cargo.toml
crates/pipit-permissions/src/: classifiers.rs  denial_tracker.rs  escape_gates.rs  lib.rs  linear_caps.rs  net_proxy.rs  production_classifiers.rs  rules.rs  shadow_detector.rs
crates/pipit-provider/: Cargo.toml
crates/pipit-provider/src/: anthropic.rs  azure_openai.rs  bedrock.rs  circuit_breaker.rs  codex_oauth.rs  copilot_oauth.rs  cross_cache.rs  fallback.rs  faux.rs  google.rs  google_cli.rs  lib.rs  mistral.rs  oauth.rs  openai.rs  openai_responses.rs  registry.rs  resilience.rs  retry.rs  types.rs  vertex.rs
crates/pipit-provider/tests/: resilience_integration.rs  streaming_conformance.rs  token_estimation.rs
crates/pipit-rules/: Cargo.toml
crates/pipit-rules/src/: activation.rs  budget.rs  cache_key.rs  compile.rs  conflict.rs  evolution.rs  inheritance.rs  lib.rs  loader.rs  registry.rs  rule.rs  signing.rs  snapshot.rs  trust.rs  watcher.rs
crates/pipit-rules/tests/: rules_integration_tests.rs
crates/pipit-tmux/: Cargo.toml
crates/pipit-tmux/src/: bridge.rs  lib.rs  session.rs  shell.rs
crates/pipit-tools/: Cargo.toml
crates/pipit-tools/src/: file_history.rs  lazy_index.rs  lib.rs  mcp.rs  registry.rs  tool_semantics_bridge.rs  typed_output.rs  typed_tool.rs  wrapper.rs
crates/pipit-vcs/: Cargo.toml
crates/pipit-vcs/src/: contract.rs  firewall.rs  gateway.rs  ledger.rs  lib.rs  reconcile.rs  snapshot.rs  workflow.rs
crates/pipit-voice/: Cargo.toml
crates/pipit-voice/src/: lib.rs  native_capture.rs  speech_bus.rs  (+2 more)
(+198 files in other folders)
