
[package]
name = "pipit-agents"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dirs = "5"
chrono = { workspace = true }
serde_yaml_ng = "0.10"

[dev-dependencies]
tempfile = { workspace = true }

