[package]
name = "pipit-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pipit"
path = "src/main.rs"

[dependencies]
pipit-core = { path = "../pipit-core" }
pipit-provider = { path = "../pipit-provider" }
pipit-tools = { path = "../pipit-tools" }
pipit-edit = { path = "../pipit-edit" }
pipit-context = { path = "../pipit-context" }
pipit-intelligence = { path = "../pipit-intelligence" }
pipit-extensions = { path = "../pipit-extensions" }
pipit-io = { path = "../pipit-io" }
pipit-config = { path = "../pipit-config" }
pipit-skills = { path = "../pipit-skills" }
pipit-mcp = { path = "../pipit-mcp" }
pipit-bench = { path = "../pipit-bench" }
pipit-browser = { path = "../pipit-browser" }
pipit-deps = { path = "../pipit-deps" }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
dirs = "5"
tempfile = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
