[package]
name = "pipit-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pipit"
path = "src/main.rs"

[dependencies]
pipit-core = { path = "../pipit-core", features = ["full"] }
pipit-provider = { path = "../pipit-provider" }
pipit-tools = { path = "../pipit-tools", features = ["memory", "agents"] }
pipit-edit = { path = "../pipit-edit" }
pipit-context = { path = "../pipit-context" }
pipit-intelligence = { path = "../pipit-intelligence" }
pipit-extensions = { path = "../pipit-extensions" }
pipit-io = { path = "../pipit-io" }
pipit-config = { path = "../pipit-config" }
pipit-skills = { path = "../pipit-skills" }
pipit-mcp = { path = "../pipit-mcp" }
pipit-vcs = { path = "../pipit-vcs" }
pipit-bench = { path = "../pipit-bench" }
pipit-browser = { path = "../pipit-browser" }
pipit-tmux = { path = "../pipit-tmux" }
pipit-deps = { path = "../pipit-deps" }
pipit-agents = { path = "../pipit-agents" }
pipit-memory = { path = "../pipit-memory" }
pipit-voice = { path = "../pipit-voice", optional = true }
pipit-mesh = { path = "../pipit-mesh", optional = true }
pipit-vim = { path = "../pipit-vim", optional = true }
pipit-lsp = { path = "../pipit-lsp", optional = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
dirs = "5"
tempfile = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["voice", "mesh", "vim-input", "lsp"]
voice = ["dep:pipit-voice"]
mesh = ["dep:pipit-mesh"]
vim-input = ["dep:pipit-vim"]
lsp = ["dep:pipit-lsp"]

[dev-dependencies]

[lints]
workspace = true
