[package]
name = "pipit-context"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-provider = { path = "../pipit-provider" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
