[package]
name = "pipit-core"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-provider = { path = "../pipit-provider" }
pipit-tools = { path = "../pipit-tools" }
pipit-edit = { path = "../pipit-edit" }
pipit-context = { path = "../pipit-context" }
pipit-intelligence = { path = "../pipit-intelligence" }
pipit-extensions = { path = "../pipit-extensions" }
pipit-config = { path = "../pipit-config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
pipit-agent-mesh = { path = "../pipit-agent-mesh" }
pipit-memory = { path = "../pipit-memory" }
pipit-verify = { path = "../pipit-verify" }
pipit-perf = { path = "../pipit-perf" }
pipit-env = { path = "../pipit-env" }
pipit-spec = { path = "../pipit-spec" }
pipit-compliance = { path = "../pipit-compliance" }
pipit-evolve = { path = "../pipit-evolve" }
pipit-arch-evolution = { path = "../pipit-arch-evolution" }
pipit-hw-codesign = { path = "../pipit-hw-codesign" }
pipit-agents = { path = "../pipit-agents" }
pipit-bridge = { path = "../pipit-bridge" }
pipit-permissions = { path = "../pipit-permissions" }

[dev-dependencies]
tempfile = { workspace = true }
