[package]
name = "pipit-core"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-provider = { path = "../pipit-provider" }
pipit-tools = { path = "../pipit-tools" }
pipit-edit = { path = "../pipit-edit" }
pipit-context = { path = "../pipit-context" }
pipit-intelligence = { path = "../pipit-intelligence" }
pipit-extensions = { path = "../pipit-extensions" }
pipit-config = { path = "../pipit-config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
pipit-agent-mesh = { path = "../pipit-agent-mesh" }
pipit-memory = { path = "../pipit-memory", optional = true }
pipit-verify = { path = "../pipit-verify", optional = true }
pipit-perf = { path = "../pipit-perf", optional = true }
pipit-env = { path = "../pipit-env", optional = true }
pipit-spec = { path = "../pipit-spec", optional = true }
pipit-compliance = { path = "../pipit-compliance", optional = true }
pipit-evolve = { path = "../pipit-evolve", optional = true }
pipit-arch-evolution = { path = "../pipit-arch-evolution", optional = true }
pipit-hw-codesign = { path = "../pipit-hw-codesign", optional = true }
pipit-agents = { path = "../pipit-agents", optional = true }
pipit-bridge = { path = "../pipit-bridge", optional = true }
pipit-permissions = { path = "../pipit-permissions", optional = true }

[features]
default = []
full = ["pipit-memory", "pipit-verify", "pipit-perf", "pipit-env", "pipit-spec",
        "pipit-compliance", "pipit-evolve", "pipit-arch-evolution",
        "pipit-hw-codesign", "pipit-agents", "pipit-bridge", "pipit-permissions"]

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
