[package]
name = "pipit-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pipitd"
path = "src/main.rs"

[dependencies]
# Internal crates
pipit-core = { path = "../pipit-core" }
pipit-provider = { path = "../pipit-provider" }
pipit-tools = { path = "../pipit-tools" }
pipit-context = { path = "../pipit-context" }
pipit-config = { path = "../pipit-config" }
pipit-channel = { path = "../pipit-channel" }
pipit-extensions = { path = "../pipit-extensions" }
pipit-intelligence = { path = "../pipit-intelligence" }
pipit-edit = { path = "../pipit-edit" }
pipit-vcs = { path = "../pipit-vcs" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client (for Telegram)
reqwest = { workspace = true }

# WebSocket (for Discord Gateway)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
urlencoding = "2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
globset = { workspace = true }
sha2 = { workspace = true }

# Embedded KV store
sled = { workspace = true }

# Cron parsing
cron = { workspace = true }

# File watching
notify = { workspace = true }

# Unix
libc = { workspace = true }
