[package]
name = "pipit-extensions"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
