[package]
name = "pipit-extensions"
version.workspace = true
edition.workspace = true

[features]
default = []
wasm-hooks = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
