[package]
name = "pipit-intelligence"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
petgraph = { workspace = true }
ignore = { workspace = true }
dashmap = { workspace = true }
notify = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
