[package]
name = "pipit-io"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-core = { path = "../pipit-core" }
pipit-config = { path = "../pipit-config" }
pipit-tmux = { path = "../pipit-tmux" }
pipit-vim = { path = "../pipit-vim" }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
similar = { workspace = true }
once_cell = "1"

# ── Ecosystem widget crates ──────────────────────────────────────────────
# Official ratatui org widgets
tui-scrollview = "0.6"
tui-popup = "0.6"
tui-big-text = "0.7"

# Text editing
tui-input = "0.11"
tui-textarea = "0.7"

# Data display
tui-tree-widget = "0.22"
tui-widget-list = "0.12"

# Visual feedback
throbber-widgets-tui = "0.8"

# Terminal integration
ansi-to-tui = "7"
tui-term = "0.2"

# Effects
tachyonfx = "0.9"

[lints]
workspace = true
