
[package]
name = "pipit-memory"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
regex = "1"
dirs = "5"
serde_yaml_ng = "0.10"
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

