[package]
name = "pipit-mesh"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-core = { path = "../pipit-core" }
pipit-agent-mesh = { path = "../pipit-agent-mesh" }
pipit-config = { path = "../pipit-config" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
