[package]
name = "pipit-provider"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-config = { path = "../pipit-config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
pin-project-lite = "0.2"
base64 = "0.22"
tokio-util = { workspace = true }
