[package]
name = "pipit-provider"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-config = { path = "../pipit-config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
pin-project-lite = "0.2"
base64 = "0.22"
tokio-util = { workspace = true }
sha2 = "0.10"
getrandom = "0.3"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
url = "2"
urlencoding = "2"
dirs = "5"

[lints]
workspace = true
