[package]
name = "pipit-tmux"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tmux bridge for pipit — visible shell panes, cross-pane agent communication, and live command observation"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
