[package]
name = "pipit-tools"
version.workspace = true
edition.workspace = true

[dependencies]
pipit-config = { path = "../pipit-config" }
pipit-vcs = { path = "../pipit-vcs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
tokio-util = { workspace = true }
pipit-provider = { path = "../pipit-provider" }
pipit-edit = { path = "../pipit-edit" }
pipit-lsp = { path = "../pipit-lsp" }
regex = { workspace = true }
dirs = "5"
schemars = { workspace = true }
cron = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = "2"
libc = "0.2"
base64 = { workspace = true }
once_cell = "1"
pipit-memory = { path = "../pipit-memory", optional = true }
pipit-agents = { path = "../pipit-agents", optional = true }

[features]
default = []
memory = ["pipit-memory"]
agents = ["pipit-agents"]

[lints]
workspace = true
