[package]
name = "pipit-vcs"
description = "VCS Workflow Kernel — single source of truth for all repository mutations"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
