[package]
name = "pipit-voice"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "multipart"] }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
cpal = "0.15"
